fix header line-height / spacing

--- a/app/assets/stylesheets/_products.scss
+++ b/app/assets/stylesheets/_products.scss
@@ -62,6 +62,16 @@ body.products-index, body.purchases {
 }
 
 body.purchases {
+  h2 {
+    em {
+      color: $darkwarmgray;
+    }
+
+    em.totalprice {
+      color: $red;
+    }
+  }
+
   section#subscription-banner {
     margin: 1em 0 0 0;
     padding: 0;
